--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evalis - Grade Calculator | Leaderboard</title>
+    <meta name="description" content="Evalis helps you instantly calculate your final grade, track your academic progress, and compare results with students through interactive leaderboards. Fast, accurate, and designed for students who want clarity and motivation." />
+    <meta name="keywords" content="grade calculator, final grade calculator, exam grade calculator, GPA tools, student progress tracker, academic tools, university grade calculator, study planner, leaderboard grades, student leaderboard, calculate final score" />
+
+    <meta property="og:title" content="Evalis — Smart Final Grade Calculator & Student Leaderboards" />
+    <meta property="og:description" content="Instantly calculate your final grade, understand what score you need to pass, and compare your performance with others using leaderboard rankings. Simple, fast, and made for students." />
+    <meta property="og:image" content="/meta_image.png" />
+    <meta property="og:url" content="https://evaiis.vercel.app/" />
+    <meta property="og:type" content="website" />
+    
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <div id="root"></div>
